Fix async admin privileges transfer issues

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ MONGODB_DATABASE=watchqueue
 # Get your API key at: https://www.themoviedb.org/settings/api
 TMDB_API_KEY=your_tmdb_api_key_here
 
+# Google OAuth (required for persistent account login)
+GOOGLE_CLIENT_ID=your_google_oauth_client_id
+
+# Auth session duration in seconds (default 30 days)
+AUTH_SESSION_TTL_SECONDS=2592000
+
 # Application Settings
 DEBUG=false
 
